# eppi-text-classification

./: .gitignore  DIRECTORY_STRUCTURE.md  Makefile  README.md  optuna.db  prot.py  prototyping_book.ipynb  prototyping_txt.txt  pyproject.toml  requirements.txt  setup.py  shields.json  tox.ini
.github/workflows/: Tests.yml  diagnose_windows.yml  generate-directory-structure.yml  main.yml  mypy_test.yml  pytest_tests.yml  ruff_test.yml  uv_test.yml
data/raw/: debunking_review.tsv
eppi_text_classification/: __init__.py  box_plot.py  create_html.py  dataset.py  features.py  hyperparameter_schemas.py  learning_curve_plot.py  model_io.py  model_stability.py  multi_process_hparam_search.py  opt.py  opt_distributed_az.py  plotly_confusion.py  plotly_histogram.py  plotly_roc.py  plots.py  predict.py  save_features_labels.py  select_threshold_plot.py  shap_plotter.py  single_process_hparam_search.py  single_process_opt.py  train.py  training_plot.py  utils.py  validation.py
eppi_text_classification/modeling/: predict.py  train.py
eppi_text_classification/plots/: __init__.py  box_plot.py  confusion_plot.py  histogram.py  learning_curve.py  optuna_plots.py  roc.py  select_threshold.py  shap_plotter.py
eppi_text_classification/plots/shap_colors/: _colorconv.py
notebooks/: compare_model_folds.ipynb  confusion_matrix.html
notebooks/lgbm/: confusion_matrix.html  lgbm_binary.ipynb  prot2.py  roc.html
notebooks/random_forest/: confusion_matrix.html  random_forest_binary.ipynb
notebooks/svm/: confusion_matrix.html  svm_binary.ipynb
notebooks/xgboost/: auc_histogram  confusion_matrix.html  savepath  xgboost_binary.ipynb
pipelines/: __init__.py  change_file_names.py  create_first_pipeline.ipynb  first_pipeline.py  load_azure_ml.py  prot_notebook.ipynb  push_create_shap_plotter_to_azure.py  push_mlflow_env_to_az_to_azure.py  push_splice_data_component_to_azure.py  run_pipeline_jobs.ipynb
pipelines/components/calculate_shap_values/: calculate_shap_values.py
pipelines/components/create_bar_plot/: create_bar_plot.py
pipelines/components/create_decision_plot/: create_decision_plot.py
pipelines/components/create_dot_plot/: create_dot_plot.py
pipelines/components/create_shapplotter/: create_shapplotter.py
pipelines/components/dot_plot/: dot_plot.py
pipelines/components/get_labels/: get_labels.py
pipelines/components/get_labels_file/: get_labels.py
pipelines/components/get_tfidf_and_feature_names/: get_tfidf_and_feature_names.py
pipelines/components/get_threshold/: get_threshold.py
pipelines/components/hyperparameter_search/: optuna_search.py
pipelines/components/plotly_confusion/: plotly_confusion.py
pipelines/components/plotly_roc/: plotly_roc.py
pipelines/components/predict_scores/: predict_scores.py
pipelines/components/process_data/: data_prep.py
pipelines/components/splice_data/: splice_data.py
pipelines/components/split_data/: split_data.py
pipelines/components/threshold_predict/: threshold_predict.py
pipelines/components/train_model/: train_model.py
pipelines/components/view_html_image/: view_html_image.py
pipelines/dependencies/: conda.yaml  display_image_env.yaml  eppi-classifier-workbench-env.yaml  temp_env.yaml
pipelines/environments/: push_classifier_workbench_env_to_azure.py  push_package_env_to_az_to_azure.py
pipelines/final_components/: __init__.py
pipelines/final_components/classify_unlabelled_tfidf/: classify_pipeline.yml  classify_unlabelled_tfidf.py  classify_unlabelled_tfidf.yml  create_batch_endpoint.py  invoke-classify.py  push_classify_unlabelled_tfidf.py  push_deployment_classify.py
pipelines/final_components/find_single_model/: find_single_model.py  find_single_model.yml  find_single_pipeline_component.yml  invoke-find-single.py  push_batch_endpoint_find_single.py  push_find_single_model_to_azure.py
pipelines/final_components/predict_unlabelled_tfidf/: predict_unlabelled_tfidf.py  predict_unlabelled_tfidf.yml  push_predict.py
pipelines/final_components/threshold_model_analysis/: create_batch_endpoint.py  invoke-threshold.py  load_azure_ml.py  pipeline_prot.py  push_deployment_threshold.py  push_threshold_model_anlaysis_to_azure.py  threshold_model_analysis.py  threshold_model_analysis.yml  threshold_pipeline_component.yml
pipelines/primitive_components/calculate_shap_values/: calculate_shap_values.py
pipelines/primitive_components/create_bar_plot/: create_bar_plot.py
pipelines/primitive_components/create_decision_plot/: create_decision_plot.py
pipelines/push_components/: load_azure_ml.py  push_bar_plot_to_azure.py  push_debunking_to_az_to_azure.py  push_decision_plot_to_azure.py  push_dot_plot_to_azure.py  push_get_labels_to_azure.py  push_get_raw_threshold_to_azure.py  push_get_tfidf_and_feature_names_to_azure.py  push_hyperparam_search_to_azure.py  push_plotly_confusion_to_azure.py  push_plotly_roc_to_azure.py  push_predict_scores_to_azure.py  push_split_data_to_azure.py  push_threshold_predict_to_azure.py  push_train_model_to_azure.py  push_view_html_image_to_azure.py
pipelines/push_primitive_components/: load_azure_ml.py  push_bar_plot_to_azure.py  push_create_shap_plotter_to_azure.py  push_decision_plot_to_azure.py  push_dot_plot_to_azure.py  push_find_single_model_to_azure.py  push_get_labels_to_azure.py  push_get_raw_threshold_to_azure.py  push_get_tfidf_and_feature_names_to_azure.py  push_hyperparam_search_to_azure.py  push_plotly_confusion_to_azure.py  push_plotly_roc_to_azure.py  push_predict_scores_to_azure.py  push_splice_data_component_to_azure.py  push_split_data_to_azure.py  push_threshold_predict_to_azure.py  push_train_model_to_azure.py
pipelines/push_user_inputs/: push_hyperparam_ranges.py
pipelines/user_inputs/: abstract_column_name.json  hyperparam_search_input.json  hyperparameter_search_ranges.json  label_column.json  test_size_025.json  title_column_name.json
tests/: check_install.py  test_00_smoke.py
tests/test_pipeline_components/: test_classify_unlabelled_tfidf.py  test_find_single_model_pipeline.py  test_threshold_model_analysis.py
(+20 files in other folders)
