[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=42",
    "setuptools-scm>=3.3",
]

[tool.setuptools]
packages = ["eppi_text_classification"]


[project]
name = "eppi_text_classification"
version = "0.0.1"
description = "Text classification of papers by titles and abstracts."
authors = [
  { name = "Sam Molyneux" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.8"
dependencies = [
    "pandas~=2.2.2",
    "optuna~=3.6.1",
    "joblib~=1.4.2",
    "lightgbm~=4.4.0",
    "scikit-learn~=1.5.0",
    "xgboost~=2.1.0",
    "spacy~=3.7.5",
    "plotly~=5.22.0",
    "nbformat~=5.10.4",
    "matplotlib~=3.9.0",
    "shap~=0.45.1",
    "jupyter~=1.0.0",
    "jsonpickle~=3.2.2",
]

[project.optional-dependencies]
test = [
    "mypy~=1.10.1",
    "ruff~=0.5.0",
    "pytest~=8.2.2",
    "tox~=4.15.1",
    "pandas-stubs~=2.2.2.240603",
]












[tool.ruff]
extend-include = ["*.ipynb"]
lint.select = ["ALL"]
exclude = ["eppi_text_classification/shap_colors/*"]
lint.ignore = [

    "D203",    #Docstring standards for datascience
    "D212",
    
    "T201",
    "T203",
    
    "COM812",
    "ISC001",

    "RET504", #Disables unessecary assignement before return

    "S106", #Checks for harcoded passwords in code

    "ANN101", #type hint for self
    "ANN102", #type hint for cls

    "PLR0913", #Too many function parameters

    "N803", #Parameters should be lower case

    "FBT001", #Booleans as function parameters
    "FBT002",
    

    "C901", #Function complexity
    "PLR0912", #Function complexity
    "PLR0915", #Function complexity

    "S301", #No unpickling, is unsafe
    #Maybe enable these for productionr
    "PD901" #Generic use of df
    ]
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
disable_error_code = [
    #'no-untyped-call',
    #'arg-type',
    #'has-type',
    #'operator',
    #'type-arg',
    #'var-annotated',
    #'assignment',
    #'operator',
    #'no-untyped-def',
    #'attr-defined',
    'no-any-return',
    'import-untyped'
]

warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true

no_implicit_reexport = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ['eppi_text_classification.shap_colors.*']
disallow_untyped_calls = false
disallow_untyped_defs = false
disable_error_code = ['index', 'arg-type', 'type-var']


[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
